WIP: fix issue with canvas size on mobile devices

--- a/Drawing_App/style.css
+++ b/Drawing_App/style.css
@@ -6,11 +6,13 @@
   --warning: #8b1c00;
   --box-shadow: 6px 12px 24px rgba(0, 0, 0, 0.2);
 }
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
 }
+
 body {
   margin: 0;
   background-color: var(--base);
@@ -20,6 +22,7 @@ body {
   min-height: 100vh;
   color: #fff;
 }
+
 .main {
   display: flex;
   flex-direction: column;
@@ -27,16 +30,19 @@ body {
   align-items: center;
   padding: 1.5rem;
 }
+
 footer {
   margin-top: auto;
   background-color: #000;
   color: #fff;
   padding: 1rem 2rem;
 }
+
 a {
   color: inherit;
   text-decoration: none;
 }
+
 .highlight {
   color: var(--attention);
 }
@@ -44,15 +50,8 @@ a {
 canvas {
   background-color: #fff;
   border: 1px solid #000;
-  width: 100%;
-  height: 500px;
-  max-width: 1500px;
 }
-.board {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+
 .button {
   cursor: pointer;
   padding: 0.25em 1.25em;
@@ -63,6 +62,7 @@ canvas {
   box-shadow: var(--box-shadow);
   scale: 1.005;
 }
+
 .flex-center {
   display: flex;
   align-items: center;
@@ -73,10 +73,6 @@ canvas {
   height: 1em;
   margin-right: 0.5em;
   font-size: 1em;
-}
-
-img svg {
-  stroke: currentColor;
 }
 
 .button-container {
@@ -147,3 +143,14 @@ img svg {
 .active {
   transform: scale(1.3);
 }
+
+/* Layout Debugger */
+
+/* * { outline: 2px dotted red }
+* * { outline: 2px dotted green }
+* * * { outline: 2px dotted orange }
+* * * * { outline: 2px dotted blue }
+* * * * * { outline: 1px solid red }
+* * * * * * { outline: 1px solid green }
+* * * * * * * { outline: 1px solid orange }
+* * * * * * * * { outline: 1px solid blue } */
